--- a/fe/package.json
+++ b/fe/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-hooks-global-state": "^2.1.0",
     "react-router-dom": "^6.26.2",
+    "tailwind": "^4.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
